# ezNote

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
src/cli/: mod.rs
src/db/: mod.rs
src/models/: mod.rs
src/services/: mod.rs
